--- a/index.html
+++ b/index.html
@@ -1,79 +1,2 @@
 <canvas id="canvas"></canvas>
-
-<script>
-const canvas = document.getElementById('canvas');
-const gfx = canvas.getContext('2d');
-
-const initialize = () => [
-[{
-	type: 'tag',
-	name: 'ground',
-},{
-	type: 'material',
-	color: 'green',
-	size: [100,100],
-	position: [0,0,0],
-}],[{
-	type: 'tag',
-	name: 'manna',
-},{
-	type: 'material',
-	color: 'yellow',
-	size: [1,1],
-	position: [0,0,1],
-}],[{
-	type: 'tag',
-	name: 'player',
-},{
-	type: 'material',
-	color: 'black',
-	size: [1,1],
-	position: [1,1,2],
-},{
-	type: 'keymap',
-	w: (me, ops) => ops.up(me),
-	a: (me, ops) => ops.left(me),
-	s: (me, ops) => ops.down(me),
-	d: (me, ops) => ops.right(me),
-}],
-];
-
-const systems = [
-	(s,t) => {
-		console.log({s, t});
-	},
-	(s,t) => {
-		s.flatMap(e => e.filter(c => c.type === 'material')).forEach((mat) => {
-			const scale = 10;
-			console.log(mat);
-			gfx.fillStyle = mat.color;
-			gfx.fillRect(
-				scale * mat.position[0], 
-				scale * mat.position[1], 
-				scale * mat.size[0], 
-				scale * mat.size[1],
-			);
-		});
-	},
-	(s,t) => {
-		const player = s.find(e => e.find(c => c.type === 'tag' && c.name === 'player'));
-		const playerMaterial = player.find(c => c.type === 'material');
-		playerMaterial.position = [
-			playerMaterial.position[0] + 1,
-			playerMaterial.position[1] + 0,
-		];
-	},
-]
-
-let tick = 0;
-let state = initialize();
-window.setInterval(() => {
-	tick++;
-	//state = systems.reduce((system, lastState) => system(lastState, tick), state);
-	state = systems.reduce((lastState, reducer) => {
-		// console.log({tick, lastState, state, reducer});
-		return reducer(lastState, tick) || lastState;
-	}, state);
-}, 1000);
-
-</script>
+<script type="module" src="flatlander.js"></script>
