--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <canvas id="canvas"></canvas>
 <script type="module" src="flatlander.js"></script>
+<h4>F L A T L A N D E R</h4>
+<h5>controls: wasd</h5>
