add link to source

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <script type="module" src="flatlander.js"></script>
 <h4>F L A T L A N D E R</h4>
 <h5>controls: wasd</h5>
+<a href="https://git.sr.ht/~dknr/flatlander">source</a>
