--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<h1>F L A T L A N D E R</h1>
+<h3>controls: wasd</h5>
 <canvas id="canvas"></canvas>
+<pre id="tick" style="font-family: monospace">0</pre>
 <script type="module" src="flatlander.js"></script>
-<h4>F L A T L A N D E R</h4>
-<h5>controls: wasd</h5>
 <a href="https://git.sr.ht/~dknr/flatlander">source</a>
+<a href="readme.txt">docs</a>
+<a href="todo.txt">todo</a>
+<a href="license.txt">license</a>
