add labels, rework styling and graphics

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>F L A T L A N D E R</h1>
+<link rel="stylesheet" type="text/css" href="/lib/Overpass/webfonts/overpass-webfont/overpass.css"/>
 <canvas id="canvas"></canvas>
 <pre id="tick" style="font-family: monospace">0</pre>
 <script type="module" src="flatlander.js"></script>
