--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="/lib/Overpass/webfonts/overpass-webfont/overpass.css"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <canvas id="canvas"></canvas>
 <pre id="tick" style="font-family: monospace">0</pre>
 <script type="module" src="flatlander.js"></script>
