--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <canvas id="canvas"></canvas>
 <pre id="tick" style="font-family: monospace">0</pre>
+<pre id="debug" style="font-family: monospace">0</pre>
 <script type="module" src="flatlander.js"></script>
 <a href="https://git.sr.ht/~dknr/flatlander">source</a>
 <a href="readme.txt">docs</a>
